--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,8 +1,3 @@
-# listen on container interface
-listen-address=0.0.0.0
-interface=eth0
-user=root
-
 # ドメインの付加されていない名前解決は上位DNSに転送しない
 domain-needed
 
@@ -16,11 +11,13 @@ bogus-priv
 #no-hosts
 
 # 【要変更】localなドメインを指定
-local=/hoge.co.jp/
+local=/home/
 
 # 【要変更】上位DNSを指定
-server=8.8.8.8
-server=8.8.4.4
+#server=8.8.8.8
+#server=8.8.4.4
+server=192.168.0.1
 
 # 【要変更】静的レコード : address=/ドメイン名/IPアドレス
-address=/www.hoge.co.jp/192.168.0.101
+address=/www.home/192.168.0.101
+address=/raspi.home/192.168.0.101
